--- a/app/src/main/res/layout/class_cover.xml
+++ b/app/src/main/res/layout/class_cover.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -17,6 +18,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
+
+            <ImageButton
+                android:id="@+id/imageButton3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:background="@color/material_on_background_disabled"
+                app:srcCompat="@drawable/baseline_close_24" />
 
             <TextView
                 android:id="@+id/user_name_text"
