--- a/app/src/main/res/layout/class_detail_activity.xml
+++ b/app/src/main/res/layout/class_detail_activity.xml
@@ -263,7 +263,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_marginLeft="10dp"
-                                android:text="Comments:"
+                                android:text="Comments about this class:"
                                 android:textColor="@color/black"
                                 android:textSize="20sp"
                                 android:textStyle="bold" />
