--- a/app/src/main/res/layout/class_cover.xml
+++ b/app/src/main/res/layout/class_cover.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,7 +18,6 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
 
             <ImageButton
                 android:id="@+id/imageButton3"
@@ -48,6 +48,7 @@
                 android:layout_marginStart="8sp"
                 android:textSize="20sp"
                 tools:text="2023 Fall" />
+
             <TextView
                 android:id="@+id/Divider"
                 android:layout_width="wrap_content"
@@ -55,6 +56,7 @@
                 android:layout_marginStart="10dp"
                 android:textSize="20sp"
                 tools:text="/" />
+
             <TextView
                 android:id="@+id/Professor"
                 android:layout_width="wrap_content"
@@ -63,7 +65,5 @@
                 android:textSize="20sp"
                 tools:text="Professor:" />
         </LinearLayout>
-
-
     </LinearLayout>
 </LinearLayout>
