--- a/app/src/main/res/layout/post_cover.xml
+++ b/app/src/main/res/layout/post_cover.xml
@@ -47,7 +47,7 @@
             >
 
             <TextView
-                android:id="@+id/contact_user_info"
+                android:id="@+id/post_info"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8sp"
@@ -66,10 +66,11 @@
                     android:layout_marginStart="20dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:background="@color/material_on_background_disabled"
+                    android:background="@android:color/transparent"
                     app:srcCompat="@drawable/baseline_thumb_up_24" />
 
                 <TextView
+                    android:id="@+id/likes"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="0"
