--- a/app/src/main/res/layout/activity_show_class_result.xml
+++ b/app/src/main/res/layout/activity_show_class_result.xml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:context=".ShowClass"
     >
 
     <RelativeLayout
@@ -13,14 +15,25 @@
         android:minHeight="?attr/actionBarSize"
         android:id="@+id/main_toolbar">
 
+        <ImageButton
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:src="@drawable/back"
+            android:layout_marginEnd="15dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:layout_centerVertical="true"
+            android:id="@+id/back_btn"
+            app:tint="@color/white" />
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_toEndOf="@+id/back_btn"
             android:text="@string/app_name"
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="@color/black"
-            android:layout_marginStart="10dp"
             android:layout_centerVertical="true"/>
 
     </RelativeLayout>
