--- a/app/src/main/res/layout/activity_show_class_result.xml
+++ b/app/src/main/res/layout/activity_show_class_result.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ShowClass"
-    >
+    tools:context=".ShowClass">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -25,7 +25,6 @@
             android:id="@+id/back_btn"
             app:tint="@color/white" />
 
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,8 +34,8 @@
             android:textStyle="bold"
             android:textColor="@color/black"
             android:layout_centerVertical="true"/>
-
     </RelativeLayout>
+
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
         android:layout_width="match_parent"
@@ -47,9 +46,6 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/main_toolbar"
             android:padding="10dp"
-            android:id="@+id/post_recycler_view"
-            />
+            android:id="@+id/post_recycler_view"/>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
-
-
 </RelativeLayout>
