trying to fix material display

--- a/app/src/main/res/layout/class_detail_activity.xml
+++ b/app/src/main/res/layout/class_detail_activity.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".chatsActivity.Inside_chat"
-    android:orientation="vertical"> <!-- Change orientation to vertical -->
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -43,8 +44,7 @@
             android:layout_height="35dp"
             app:srcCompat="@drawable/ic_add"
             android:background="@android:color/transparent"
-            android:layout_alignParentEnd="true"
-            />
+            android:layout_alignParentEnd="true"/>
 
         <ImageButton
             android:id="@+id/imageButton4"
@@ -66,8 +66,7 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/fullname_container"
-                >
+                android:id="@+id/fullname_container">
 
                 <TextView
                     android:id="@+id/fullname"
@@ -79,6 +78,7 @@
                     android:textColor="@color/black"
                     android:textSize="30sp"
                     android:textStyle="bold" />
+
                 <View
                     android:id="@+id/divider"
                     android:layout_below="@+id/fullname"
@@ -86,10 +86,7 @@
                     android:layout_height="1dp"
                     android:layout_margin="10dp"
                     android:background="?android:attr/listDivider" />
-
-
             </RelativeLayout>
-
             <RelativeLayout
                 android:id="@+id/prof_container"
                 android:layout_width="match_parent"
@@ -134,9 +131,7 @@
                         android:textColor="@color/black"
                         android:textSize="32sp"
                         android:textStyle="bold" />
-
                 </LinearLayout>
-
             </RelativeLayout>
 
             <RelativeLayout
@@ -150,6 +145,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:orientation="vertical">
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -178,6 +174,7 @@
                 WangChao WangChao WangChao WangChao WangChao Wang"
                         android:textColor="@color/black"
                         android:textSize="20sp" />
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -196,7 +193,6 @@
                             android:layout_marginTop="10dp"
                             android:orientation="vertical">
 
-
                             <TextView
                                 android:id="@+id/material"
                                 android:layout_width="wrap_content"
@@ -213,6 +209,7 @@
                                 android:layout_height="match_parent"
                                 android:layout_below="@id/material"
                                 android:padding="10dp" />
+
                             <TextView
                                 android:id="@+id/empty_view1"
                                 android:layout_width="match_parent"
@@ -220,6 +217,7 @@
                                 android:text="No Materials Yet."
                                 android:gravity="center"
                                 android:visibility="gone"/>
+
                             <Button
                                 android:id="@+id/uploadMaterialbtn"
                                 android:layout_width="match_parent"
@@ -227,11 +225,9 @@
                                 android:background="@drawable/rounded_for_recycle"
                                 android:layout_marginHorizontal="10dp"
                                 android:text="Upload More Material" />
-
                         </LinearLayout>
-
-
                     </RelativeLayout>
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -241,8 +237,7 @@
                     <RelativeLayout
                         android:id="@+id/roster_container"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                      >
+                        android:layout_height="wrap_content">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -256,12 +251,9 @@
                                 android:background="@drawable/rounded_for_recycle"
                                 android:layout_marginHorizontal="10dp"
                                 android:text="Click to see the Roster" />
-
                         </LinearLayout>
-
-
-
                     </RelativeLayout>
+
                     <View
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
@@ -277,6 +269,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:orientation="vertical">
+
                             <Button
                                 android:id="@+id/commentbtn"
                                 android:layout_width="match_parent"
@@ -299,6 +292,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
                                 android:padding="10dp" />
+
                             <TextView
                                 android:id="@+id/empty_view2"
                                 android:layout_width="match_parent"
@@ -306,18 +300,10 @@
                                 android:text="Be The First Reviewer."
                                 android:gravity="center"
                                 android:visibility="gone"/>
-
-
                         </LinearLayout>
-
-
                     </RelativeLayout>
                 </LinearLayout>
-
             </RelativeLayout>
-
         </RelativeLayout>
-
     </ScrollView>
-
 </LinearLayout>
