--- a/app/src/main/res/layout/materials_cover.xml
+++ b/app/src/main/res/layout/materials_cover.xml
@@ -10,6 +10,7 @@
     android:elevation="2dp">
 
     <LinearLayout
+        android:id="@+id/materialsList"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
@@ -40,22 +41,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/materialTerm"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8sp"
-                android:textSize="20sp"
-                tools:text="2023 Fall" />
-
-            <TextView
-                android:id="@+id/Divider"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textSize="20sp"
-                tools:text="/" />
 
             <TextView
                 android:id="@+id/format"
