--- a/app/src/main/res/layout/materials_cover.xml
+++ b/app/src/main/res/layout/materials_cover.xml
@@ -29,7 +29,7 @@
                 app:srcCompat="@drawable/baseline_close_24" />
 
             <TextView
-                android:id="@+id/materialType"
+                android:id="@+id/materialName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8sp"
@@ -43,7 +43,7 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/format"
+                android:id="@+id/fileType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
