--- a/app/src/main/res/layout/materials_cover.xml
+++ b/app/src/main/res/layout/materials_cover.xml
@@ -43,6 +43,14 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/fileTypeText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:textSize="20sp"
+                tools:text="File Type:" />
+
+            <TextView
                 android:id="@+id/fileType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
