--- a/app/src/main/res/layout/materials_cover.xml
+++ b/app/src/main/res/layout/materials_cover.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content">
 
             <ImageButton
-                android:id="@+id/imageButton3"
+                android:id="@+id/deleteMaterialBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentEnd="true"
@@ -43,20 +43,12 @@
             android:layout_height="wrap_content">
 
             <TextView
-                android:id="@+id/fileTypeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:textSize="20sp"
-                tools:text="File Type:" />
-
-            <TextView
                 android:id="@+id/fileType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:textSize="20sp"
-                tools:text="PDF" />
+                tools:text="pdf" />
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
