--- a/app/src/main/res/layout/recycle_chat.xml
+++ b/app/src/main/res/layout/recycle_chat.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/round_textedit"
-        android:backgroundTint="@color/pink"
+        android:backgroundTint="@color/darkPink"
         android:layout_alignParentEnd="true"
         android:padding="8dp"
         android:layout_marginStart="80dp"
