--- a/app/src/main/res/drawable/rounded_pop_window.xml
+++ b/app/src/main/res/drawable/rounded_pop_window.xml
@@ -1,5 +1,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/darkPink"/>
+    <solid android:color="@color/yellow"/>
     <corners android:radius="10dp" />
     <padding android:left="5dp" android:top="5dp" android:right="5dp" android:bottom="5dp" />
 </shape>
