--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,10 +29,10 @@
             android:id="@+id/usernameText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="70dp"
-            android:padding="10dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rounded_background"
+            android:padding="10dp"
             android:text="Tommy Trojan"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
@@ -42,23 +42,26 @@
             android:id="@+id/changeUsername"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="70dp"
-            android:layout_marginLeft="24dp"
-            android:padding="10dp"
+            android:layout_marginTop="16dp"
             android:background="@drawable/rounded_background"
             android:clickable="true"
+            android:padding="10dp"
             android:src="@drawable/ic_edit"
+            app:layout_constraintBottom_toBottomOf="@+id/emailText"
+            app:layout_constraintEnd_toStartOf="@+id/logout"
+            app:layout_constraintHorizontal_bias="0.028"
             app:layout_constraintStart_toEndOf="@+id/usernameText"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
 
         <TextView
             android:id="@+id/emailText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_marginTop="12dp"
-            android:padding="5dp"
+            android:layout_marginStart="28dp"
+            android:layout_marginTop="8dp"
             android:background="@drawable/rounded_background"
+            android:padding="5dp"
             android:text="tommytrojan@usc.edu"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/usernameText" />
@@ -67,38 +70,38 @@
             android:id="@+id/majorYearText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
+            android:layout_marginStart="28dp"
             android:layout_marginTop="12dp"
             android:background="@drawable/rounded_background"
             android:padding="5dp"
             android:text="XXXX XXXX"
-            app:layout_constraintStart_toEndOf="@id/emailText"
-            app:layout_constraintTop_toBottomOf="@+id/usernameText" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/emailText" />
 
         <TextView
             android:id="@+id/classesText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="12dp"
+            android:layout_marginTop="32dp"
             android:padding="10dp"
             android:text="ClassList: "
             android:textSize="20dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/emailText" />
+            app:layout_constraintTop_toBottomOf="@+id/majorYearText" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/itemsList"
-            android:layout_width="match_parent"
-            android:layout_height="382dp"
+            android:layout_width="358dp"
+            android:layout_height="473dp"
             android:layout_marginLeft="30dp"
             android:layout_marginRight="30dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.86"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/classesText"
-            app:layout_constraintVertical_bias="0.018" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/profile_image"
@@ -108,10 +111,10 @@
             android:src="@drawable/circular"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.975"
+            app:layout_constraintHorizontal_bias="0.859"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.153" />
+            app:layout_constraintVertical_bias="0.17" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/profilechangebtn"
@@ -129,19 +132,21 @@
             app:layout_constraintVertical_bias="1.0"
             android:focusable="true" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        <Button
+            android:id="@+id/logout"
+            android:layout_width="70dp"
+            android:layout_height="wrap_content"
+            android:padding="1dp"
+            android:text="Log Out"
+            android:textSize="13sp"
+            app:backgroundTint="#F4ABAB"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.953"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.002" />
 
-    <Button
-        android:id="@+id/logout"
-        android:layout_width="70dp"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="30dp"
-        android:layout_marginBottom="30dp"
-        android:padding="1dp"
-        android:text="Log Out"
-        android:textSize="13sp"
-        app:backgroundTint="#F4ABAB"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
