--- a/app/src/main/res/layout/review_popup.xml
+++ b/app/src/main/res/layout/review_popup.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
+    android:padding="10dp"
     android:background="@drawable/rounded_pop_window"
     android:elevation="2dp">
 
@@ -15,69 +15,55 @@
         android:layout_gravity="center"
         android:orientation="vertical">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <ImageButton
-                android:id="@+id/cancel"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_alignParentEnd="true"
-                android:background="@android:color/transparent"
-                app:srcCompat="@drawable/baseline_close_24" />
-
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            >
             <TextView
+                android:layout_marginStart="10dp"
                 android:id="@+id/Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
                 android:textColor="@color/black"
                 android:textSize="25sp"
                 android:textStyle="bold"
-                tools:text="Leave a Review" />
+                android:text="Leave a Review" />
 
-            <LinearLayout
-                android:id="@+id/overallLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_below="@id/Title"
-                android:orientation="horizontal">
-            <TextView
-                android:id="@+id/overall"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:textColor="@color/black"
-                android:textSize="15sp"
-                tools:text="Overall:" />
-            <RatingBar
-                android:id="@+id/overallRating"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="76dp"
-                android:numStars="5"
-                android:stepSize="0.5"
-                android:rating="0" />
-            </LinearLayout>
 
-            <LinearLayout
+        <RelativeLayout
+            android:id="@+id/overallLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/titleLayout"
+            android:orientation="vertical"
+            >
+
+                <TextView
+                    android:id="@+id/overall"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginTop="15dp"
+                    android:textColor="@color/black"
+                    android:textSize="20sp"
+                    android:text="Overall:" />
+
+                <RatingBar
+                    android:id="@+id/overallRating"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginStart="60dp"
+                    android:layout_marginEnd="7dp"
+                    android:numStars="5"
+                    android:rating="0"
+                    android:stepSize="0.5"/>
+            </RelativeLayout>
+
+            <RelativeLayout
                 android:id="@+id/workloadLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_below="@id/overallLayout"
                 android:orientation="horizontal">
+
                 <TextView
                     android:id="@+id/workload"
                     android:layout_width="wrap_content"
@@ -85,19 +71,22 @@
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="15dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    tools:text="Workload:" />
+                    android:textSize="20sp"
+                    android:text="Workload:" />
+
                 <RatingBar
                     android:id="@+id/workloadRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
                     android:layout_marginStart="60dp"
+                    android:layout_marginEnd="7dp"
                     android:numStars="5"
-                    android:stepSize="0.5"
-                    android:rating="0" />
-            </LinearLayout>
+                    android:rating="0"
+                    android:stepSize="0.5" />
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/attendanceLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -111,22 +100,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    tools:text="Attendance required?" />
+                    android:textSize="20sp"
+                    android:text="Attendance required?" />
 
-                <Switch
+                <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/attendanceSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_below="@id/workloadLayout"
-                    android:layout_marginStart="176dp"
+                    android:layout_alignParentEnd="true"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
-            <LinearLayout
+            <RelativeLayout
                 android:id="@+id/latesubmissionLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -141,19 +129,19 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="10dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
-                    tools:text="Late submissions allowed?" />
+                    android:textSize="20sp"
+                    android:text="Late submissions allowed?" />
 
-                <Switch
+                <androidx.appcompat.widget.SwitchCompat
                     android:id="@+id/lateSwitch"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="140dp"
                     android:textColor="@color/black"
-                    android:textSize="15sp"
+                    android:layout_alignParentEnd="true"
+                    android:textSize="20sp"
                     android:textStyle="bold" />
 
-            </LinearLayout>
+            </RelativeLayout>
 
             <EditText
                 android:id="@+id/Review"
@@ -178,7 +166,6 @@
                 android:background="@color/pink"
                 android:text="Submit" />
 
-        </RelativeLayout>
+        </LinearLayout>
 
     </LinearLayout>
-</LinearLayout>
