minor change to add empty notifier

--- a/app/src/main/res/layout/activity_roster.xml
+++ b/app/src/main/res/layout/activity_roster.xml
@@ -42,13 +42,24 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/main_toolbar">
-        <androidx.recyclerview.widget.RecyclerView
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/main_toolbar"
-            android:padding="10dp"
-            android:id="@+id/post_recycler_view"
-            />
+            android:layout_height="wrap_content">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dp"
+                android:id="@+id/post_recycler_view"
+                />
+            <TextView
+                android:id="@+id/emptyRoster"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="20dp"
+                android:gravity="center"
+                android:text="No classmates yet"
+                />
+        </RelativeLayout>
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
